--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -24,6 +24,13 @@
   margin: 0 auto;
   padding: 4rem 1.5rem;
   color: var(--text-main);
+   height: 100vh;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.members-page::-webkit-scrollbar {
+  display: none;
 }
 
 /* =====================================================
@@ -174,22 +181,3 @@
   }
 }
 
-/* ===============================
-   HIDE SCROLLBAR (PAGE CONTAINER)
-   =============================== */
-
-/* Chrome, Edge, Safari */
-.page-scroll::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
-
-/* Firefox */
-.page-scroll {
-  scrollbar-width: none;
-}
-
-/* IE / old Edge */
-.page-scroll {
-  -ms-overflow-style: none;
-}
