--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -23,6 +23,12 @@
   margin: 0 auto;
   padding: 4.5rem 1.5rem 5rem;
   color: var(--text-main);
+  height: 100vh;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+.products-page::-webkit-scrollbar{
+   display: none;
 }
 
 /* =====================================================
@@ -252,24 +258,4 @@
   .products-controls {
     flex-direction: column;
   }
-}
-
-/* ===============================
-   HIDE SCROLLBAR (PAGE CONTAINER)
-   =============================== */
-
-/* Chrome, Edge, Safari */
-.page-scroll::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
-
-/* Firefox */
-.page-scroll {
-  scrollbar-width: none;
-}
-
-/* IE / old Edge */
-.page-scroll {
-  -ms-overflow-style: none;
 }
